[gd_scene load_steps=4 format=3 uid="uid://r2rcn54eg4n6"]

[ext_resource type="Script" path="res://Scripts/BPMMaster.gd" id="1_v4erc"]
[ext_resource type="AudioStream" uid="uid://bpc7judmumu3a" path="res://Audio/Songs/Sample1.mp3" id="2_onr8m"]
[ext_resource type="AudioStream" uid="uid://u3b0wntbljip" path="res://Audio/Songs/MetronomeTick.mp3" id="3_vryls"]

[node name="BpmMaster" type="Node2D"]
script = ExtResource("1_v4erc")
PlayMetronome = true

[node name="BPM_Notifier" type="Timer" parent="."]

[node name="SampleSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_onr8m")

[node name="MetronomeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vryls")

[connection signal="timeout" from="BPM_Notifier" to="." method="BPM_Notification"]
